--- a/i2ljp.html
+++ b/i2ljp.html
@@ -5,6 +5,17 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3pro.css">
 <title>Platinum 88 Fans Page</title>
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-142222692-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-142222692-1');
+</script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+
 <script src="i2ljp_hp.js"></script>
 <script src="wla_func.js"></script>
 
