--- a/i2ljp.html
+++ b/i2ljp.html
@@ -31,7 +31,7 @@
 </body>
 
 <script type="text/javascript">
-    document.getElementById('ws_link').innerHTML = '<a rel="nofollow" target="_blank" href="https://wa.me/'+wanumber()+'?text=Saya%20nak%20tips%20KISS%20%26%20918%20(LDP004)"><img src="wa.png" width="300" height="300"></a>';
+    document.getElementById('ws_link').innerHTML = '<a rel="nofollow" target="_blank" href="https://wa.me/'+wanumber()+'?text=Saya%20nak%20tips%20KISS%20%26%20918"><img src="wa.png" width="300" height="300"></a>';
 </script>
   
 </html>
