--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ body, html {height: 100%}
 
 <div class="bgimg w3-display-container w3-text-white">
   <div class="w3-display-middle w3-jumbo">
-    <p><img src="/w3images/onepage_restaurant.jpg" width="300" height="300"></p>
+    <p><img src="/plat88_logo.png" width="300" height="300"></p>
   </div>
   <div class="w3-display-topleft w3-container w3-xlarge">
     <p><button onclick="document.getElementById('menu').style.display='block'" class="w3-button w3-black">BONUS</button></p>
