--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@ body, html {height: 100%}
   background-color: #131313;
   min-height: 100%;
   background-position: center;
-  background-size: cover;
+  //background-size: cover;
 }
 </style>
 <body>
 
 <div class="bgimg w3-display-container w3-text-white">
   <div class="w3-display-middle w3-jumbo">
-    <p><img src="/plat88_logo.png" width="500" height="500"></p>
+    <img src="/plat88_logo.png" width="500" height="500">
   </div>
   <div class="w3-display-topleft w3-container w3-xlarge">
     <p><button onclick="document.getElementById('menu').style.display='block'" class="w3-button w3-black">BONUS</button></p>
