--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@ body, html {height: 100%}
 .bgimg {
   background-color: #131313;
   min-height: 100%;
-  background-position: center;
-  //background-size: cover;
+  background-repeat: no-repeat;
+  background-size: auto;
+  background-color: #131313;
 }
 </style>
 <body>
 
 <div class="bgimg w3-display-container w3-text-white">
-  <div class="w3-display-middle w3-jumbo">
+<!--  <div class="w3-display-middle w3-jumbo">
     <img src="/plat88_logo.png" width="500" height="500">
-  </div>
+  </div>-->
   <div class="w3-display-topleft w3-container w3-xlarge">
     <p><button onclick="document.getElementById('menu').style.display='block'" class="w3-button w3-black">BONUS</button></p>
     <p><button onclick="document.getElementById('contact').style.display='block'" class="w3-button w3-black">HUBUNGI KAMI</button></p>
