--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 body,h1,h5 {font-family: "Raleway", sans-serif}
 body, html {height: 100%}
 .bgimg {
+  background-image: url('plat88_logo.png');
   background-color: #131313;
   min-height: 100%;
   background-repeat: no-repeat;
