--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ body, html {height: 100%}
   background-image: url('plat88_logo.png');
   background-color: #131313;
   min-height: 100%;
+  background-position: center;
   background-repeat: no-repeat;
   background-size: auto;
   background-color: #131313;
