--- a/index.html
+++ b/index.html
@@ -6,16 +6,27 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <style>
-body,h1,h5 {font-family: "Raleway", sans-serif}
+body,h3,h5 {font-family: "Raleway", sans-serif}
 body, html {height: 100%}
 .bgimg {
-  background-image: url('plat88_logo.png');
+  background-image: url('http://pl88.ml/plat88_logo.png');
   background-color: #131313;
   min-height: 100%;
   background-position: center;
-  background-repeat: no-repeat;
-  background-size: auto;
+  background-size: 200px 200px;
   background-color: #131313;
+}
+
+@media only screen and (min-width: 500px) {
+  .bgimg {
+    background-image: url('http://pl88.ml/plat88_logo.png');
+    background-color: #131313;
+    min-height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: auto;
+    background-color: #131313;
+  }
 }
 </style>
 <body>
